<resources>
    <string name="app_name">SimpleShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="_1500">1500$</string>
    <string name="samsung_galaxy_s20_ultra">Samsung Galaxy s20 Ultra</string>
    <string name="todo">TODO</string>
    <string name="filter_options">Filter options</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>

    <string name="explorer">● Explorer</string>
    <string name="shop">● Shop</string>
    <string name="profile">● Profile</string>
    <string name="favorite">● Favorite</string>

    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="hide_all">hide all</string>
    <string name="hot_sales">Hot Sales</string>
    <string name="best_seller">Best Seller</string>
    <string name="buy_now">Buy Now!</string>
    <string name="phones">Phones</string>
    <string name="new_phone">New</string>


    <string-array name="brand">
        <item>Samsung</item>
        <item>Xiaomi</item>
        <item>Motorola</item>
    </string-array>

    <string-array name="price">
        <item>$300 - $500</item>
        <item>$500 - $1000</item>
        <item>$1000 - $10000</item>
    </string-array>

    <string-array name="size">
        <item>4.5 to 5.5 inches</item>
    </string-array>

    <string-array name="geo_spinner">
        <item>San Francisco, USA</item>
        <item>London , UK</item>
    </string-array>

</resources>