<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CustomBottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presenter.screens.home.FilterBottomSheetFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/close_imageButton"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/custom_filter_close"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/done_imageButton"
            android:layout_width="86dp"
            android:layout_height="37dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_filter_done"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="150dp"
            android:text="@string/filter_options"
            android:textColor="@color/filter_text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/brand_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginBottom="4dp"
            android:text="@string/brand"
            android:textColor="@color/filter_text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/brand_Spinner"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/brand_Spinner"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="133dp"
            android:layout_marginEnd="31dp"
            android:background="@drawable/custom_filter_spinner"
            android:entries="@array/brand"
            android:paddingStart="14dp"
            android:paddingEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginBottom="4dp"
            android:text="@string/price"
            android:textColor="@color/filter_text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/price_Spinner"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/price_Spinner"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="31dp"
            android:background="@drawable/custom_filter_spinner"
            android:entries="@array/price"
            android:paddingStart="14dp"
            android:paddingEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/brand_Spinner" />


        <TextView
            android:id="@+id/size_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginBottom="4dp"
            android:text="@string/size"
            android:textColor="@color/filter_text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/size_Spinner"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/size_Spinner"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_filter_spinner"
            android:entries="@array/size"
            android:paddingStart="14dp"
            android:paddingEnd="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_Spinner" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>