<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_store_row_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="7dp"
    android:layout_marginEnd="7dp"
    app:cardCornerRadius="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <ImageView
            android:id="@+id/home_store_picture_textView"
            android:layout_width="220dp"
            android:layout_height="0dp"
            android:background="@color/black"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/home_store_new_textView"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/orange"
            android:gravity="center"
            android:text="@string/new_phone"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/home_store_title_textView"
            android:layout_width="109dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="18dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_store_new_textView" />

        <TextView
            android:id="@+id/home_store_subtitle_textView"
            android:layout_width="wrap_content"
            android:layout_height="13sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/home_store_title_textView"
            app:layout_constraintTop_toBottomOf="@id/home_store_title_textView" />


        <Button
            android:id="@+id/home_store_buy_now_button"
            android:layout_width="93dp"
            android:layout_height="23dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="26dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/buy_now"
            android:textAllCaps="false"
            android:textColor="@color/home_seller_text_color"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/home_store_title_textView"
            app:layout_constraintTop_toBottomOf="@id/home_store_subtitle_textView"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
