<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bestSellerItem"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/home_store_row_cardView"
        android:layout_width="181dp"
        android:layout_height="227dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/picture_imageView"
                android:layout_width="187dp"
                android:layout_height="168dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />


            <TextView
                android:id="@+id/priceWithoutDiscount_textView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="2dp"
                android:text="@string/_1500"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/picture_imageView" />

            <TextView
                android:id="@+id/discountPrice_textView"
                android:layout_width="wrap_content"
                android:layout_height="13dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="4dp"
                android:text="@string/_1500"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@id/priceWithoutDiscount_textView"
                app:layout_constraintStart_toEndOf="@id/priceWithoutDiscount_textView"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/title_textView"
                android:layout_width="wrap_content"
                android:layout_height="13dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="6dp"
                android:text="@string/samsung_galaxy_s20_ultra"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/priceWithoutDiscount_textView"
                tools:ignore="SmallSp" />

            <ImageButton
                android:id="@+id/favorite_imageButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/circle_background"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/todo"
                android:elevation="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>